Introduce SVector as a replacement for PVector. This Vector is immutable. Thus, many calls had to be updated