@@ -1,11 +1,11 @@
 package org.schlunzis.neuroevolution.model.track;
 
-import org.schlunzis.neuroevolution.sdk.track.Track;
-import org.schlunzis.neuroevolution.sdk.util.Boundary;
-import org.schlunzis.neuroevolution.sdk.util.PVector;
 import com.badlogic.gdx.math.CatmullRomSpline;
 import com.badlogic.gdx.math.Vector2;
 import lombok.Getter;
+import org.schlunzis.neuroevolution.sdk.track.Track;
+import org.schlunzis.neuroevolution.sdk.util.Boundary;
+import org.schlunzis.neuroevolution.sdk.util.SVector;
 
 import java.util.ArrayList;
 import java.util.List;
@@ -16,7 +16,7 @@ public class ConvexHullTrack implements Track {
     private double halfTrackWidth = 3 / 40d;
 
     @Getter
-    private PVector start;
+    private SVector start;
 
     @Getter
     private List<Boundary> walls;
@@ -28,24 +28,24 @@ public class ConvexHullTrack implements Track {
     }
 
     /**
-     *  <a href=
+     * <a href=
      * "https://www.gamedeveloper.com/programming/generating-procedural-racetracks">gamedeveloper.com</a>
-     *
+     * <p>
      * {@inheritDoc}
      */
     @Override
     public void buildTrack() {
         int numRandomPoints = 50;
 
-        ArrayList<PVector> pts = new ArrayList<>();
+        ArrayList<SVector> pts = new ArrayList<>();
         checkpoints = new ArrayList<>();
         double buffer = halfTrackWidth * 1.5;
         for (int i = 0; i < numRandomPoints; i++) {
             double x = buffer + Math.random() * (1 - buffer * 2);
             double y = buffer + Math.random() * (1 - buffer * 2);
-            pts.add(new PVector(x, y));
+            pts.add(new SVector(x, y));
         }
-        ArrayList<PVector> hull = getConvexHull(pts);
+        ArrayList<SVector> hull = getConvexHull(pts);
 
         int pushIterations = 3;
         for (int i = 0; i < pushIterations; i++) {
@@ -53,19 +53,19 @@ public class ConvexHullTrack implements Track {
         }
 
         // adding circuit details
-       ArrayList<PVector> rSet = new ArrayList<>();
-        PVector disp = new PVector();
+        ArrayList<SVector> rSet = new ArrayList<>();
+
         double difficulty = 1f / 20f; // the closer to the, the harder the track
-        double maxDisp = 20/400d;
+        double maxDisp = 20 / 400d;
         for (int i = 0; i < hull.size(); i++) {
             double dispLen = Math.pow(Math.random(), difficulty) * maxDisp;
-            disp.set(0, 1);
-            disp.rotate(Math.random() * 2 * Math.PI);
-            disp.setMag(dispLen);
-            PVector p1 = hull.get(i);
-            PVector p2 = hull.get((i + 1) % hull.size());
-            PVector mid = PVector.add(p1, p2).mult(0.5);
-            mid.add(disp);
+            SVector disp = new SVector(0, 1)
+                    .rotate(Math.random() * 2 * Math.PI)
+                    .withMag(dispLen);
+            SVector p1 = hull.get(i);
+            SVector p2 = hull.get((i + 1) % hull.size());
+            SVector mid = SVector.add(p1, p2).mult(0.5)
+                    .add(disp);
             rSet.add(p1);
             rSet.add(mid);
         }
@@ -84,44 +84,43 @@ public class ConvexHullTrack implements Track {
 
         hull = smoothTrack(hull);
 
-        ArrayList<PVector> ptsInner = new ArrayList<>();
-        ArrayList<PVector> ptsOuter = new ArrayList<>();
-        PVector center = new PVector(0.5, 0.5);
+        ArrayList<SVector> ptsInner = new ArrayList<>();
+        ArrayList<SVector> ptsOuter = new ArrayList<>();
+        SVector center = new SVector(0.5, 0.5);
         for (int i = 0; i < hull.size(); i++) {
-            PVector p = hull.get(i);
-            PVector v = PVector.sub(p, center);
-            v.limit(halfTrackWidth);
-            PVector v2 = v.copy();
-            v2.rotate(Math.PI);
-            PVector outer = PVector.add(v2, p);
-            PVector inner = PVector.add(v, p);
+            SVector p = hull.get(i);
+            SVector v = SVector.sub(p, center)
+                    .withLimit(halfTrackWidth);
+            SVector inner = SVector.add(v, p);
+            v = v.rotate(Math.PI);
+            SVector outer = SVector.add(v, p);
             ptsInner.add(inner);
             ptsOuter.add(outer);
             if (i % checkpointDivider == 0)
-                checkpoints.add(new Boundary(inner.x, inner.y, outer.x, outer.y));
+                checkpoints.add(new Boundary(inner.x(), inner.y(), outer.x(), outer.y()));
         }
-        start = checkpoints.get(0).midPoint();
+        start = checkpoints.getFirst().midPoint();
 
         walls = new ArrayList<>();
         walls.addAll(Boundary.createBoundaries(ptsInner, true));
         walls.addAll(Boundary.createBoundaries(ptsOuter, true));
     }
 
-    private ArrayList<PVector> getConvexHull(ArrayList<PVector> points) {
-        points.sort((p1, p2) -> p1.x < p2.x ? -1 : 1);
-        ArrayList<PVector> hull = new ArrayList<>();
-        PVector leftMost = points.get(0);
-        PVector currentVertex = leftMost;
+    private ArrayList<SVector> getConvexHull(ArrayList<SVector> points) {
+        points.sort((p1, p2) -> p1.x() < p2.y() ? -1 : 1);
+        ArrayList<SVector> hull = new ArrayList<>();
+        SVector leftMost = points.getFirst();
+        SVector currentVertex = leftMost;
         hull.add(currentVertex);
-        PVector nextVertex = points.get(1);
+        SVector nextVertex = points.get(1);
         int index = 2;
         boolean finished = false;
         while (!finished) {
-            PVector checking = points.get(index);
-            PVector a = PVector.sub(nextVertex, currentVertex);
-            PVector b = PVector.sub(checking, currentVertex);
-            PVector cross = a.cross(b);
-            if (cross.z < 0) {
+            SVector checking = points.get(index);
+            SVector a = SVector.sub(nextVertex, currentVertex);
+            SVector b = SVector.sub(checking, currentVertex);
+            SVector cross = a.cross(b);
+            if (cross.z() < 0) {
                 nextVertex = checking;
             }
             index++;
@@ -140,14 +139,14 @@ public class ConvexHullTrack implements Track {
         return hull;
     }
 
-    private ArrayList<PVector> smoothTrack(ArrayList<PVector> dataSet) {
+    private ArrayList<SVector> smoothTrack(ArrayList<SVector> dataSet) {
         Vector2[] data = new Vector2[dataSet.size()];
-        for (PVector p : dataSet) {
-            data[dataSet.indexOf(p)] = new Vector2((float) p.x, (float) p.y);
+        for (SVector p : dataSet) {
+            data[dataSet.indexOf(p)] = new Vector2((float) p.x(), (float) p.y());
         }
-        float step = 1/4000f;
-        ArrayList<PVector> smoothed = new ArrayList<>();
-        for (float t = 0; t <= 1.0f;) {
+        float step = 1 / 4000f;
+        ArrayList<SVector> smoothed = new ArrayList<>();
+        for (float t = 0; t <= 1.0f; ) {
             Vector2 p = new Vector2();
             // TODO: use other library to smooth the track
             p = CatmullRomSpline.calculate(p, t, data, true, new Vector2());
@@ -155,37 +154,35 @@ public class ConvexHullTrack implements Track {
             deriv = CatmullRomSpline.derivative(deriv, t, data, true, new Vector2());
             float len = deriv.len();
             deriv.scl(1f / len);
-            deriv.scl(1/400f);
+            deriv.scl(1 / 400f);
             deriv.set(-deriv.y, deriv.x);
             Vector2 v1 = new Vector2();
             v1.set(p).add(deriv);
-            smoothed.add(new PVector(v1.x, v1.y));
+            smoothed.add(new SVector(v1.x, v1.y));
             Vector2 v2 = new Vector2();
             v2.set(p).sub(deriv);
-            smoothed.add(new PVector(v2.x, v2.y));
+            smoothed.add(new SVector(v2.x, v2.y));
             t += step / len;
         }
         return smoothed;
     }
 
-    private void pushApart(ArrayList<PVector> points) {
-        double dst = 15/400d;
+    private void pushApart(ArrayList<SVector> points) {
+        double dst = 15 / 400d;
         double dst2 = dst * dst;
         for (int i = 0; i < points.size(); i++) {
             for (int j = i + 1; j < points.size(); j++) {
                 if (dst2(points.get(i), points.get(j)) < dst2) {
-                    double hx = points.get(j).x - points.get(i).x;
-                    double hy = points.get(j).y - points.get(i).y;
+                    double hx = points.get(j).x() - points.get(i).x();
+                    double hy = points.get(j).y() - points.get(i).y();
                     double hl = Math.sqrt(hx * hx + hy * hy);
                     hx /= hl;
                     hy /= hl;
                     double dif = dst - hl;
                     hx *= dif;
                     hy *= dif;
-                    points.get(j).x += hx;
-                    points.get(j).y += hy;
-                    points.get(i).x -= hx;
-                    points.get(i).y -= hy;
+                    points.get(j).add(new SVector(hx, hy));
+                    points.get(i).sub(new SVector(hx, hy));
                 }
             }
         }
@@ -201,14 +198,14 @@ public class ConvexHullTrack implements Track {
      * PVector toNext = PVector.sub(dataSet.get(next), dataSet.get(i));
      * toNext.normalize();
      * // I got a vector to the next and to the previous point, normalized.
-     * 
+     *
      * double a = PVector.dot(toPrevious, toNext);
      * // perp dot product between the previous and next point. Google it you should
      * // learn about it!
-     * 
+     *
      * double deg = Math.abs(Math.toDegrees(a));
      * deg = Math.toDegrees(PVector.angleBetween(toPrevious, toNext));
-     * 
+     *
      * if (deg <= 180)
      * continue;
      * double nA = 100 * Math.signum(a) * (180d / Math.PI);
@@ -222,22 +219,21 @@ public class ConvexHullTrack implements Track {
      * dataSet.get(next).y = dataSet.get(i).y + newVec.y;
      * // I got the difference between the current angle and 100degrees, and built a
      * // new vector that puts the next point at 100 degrees.
-     * 
+     *
      * }
      * }
      */
 
-    private double dst2(PVector p1, PVector p2) {
-        return (p1.x - p2.x) * (p1.x - p2.x) + (p1.y - p2.y) * (p1.y - p2.y);
+    private double dst2(SVector p1, SVector p2) {
+        return (p1.x() - p2.x()) * (p1.x() - p2.x()) + (p1.y() - p2.y()) * (p1.y() - p2.y());
     }
 
     @Override
-    public PVector getStartVelocity() {
-        Boundary boundary = checkpoints.get(0);
-        PVector v = PVector.sub(boundary.getA(), boundary.getB());
-        v.rotate(Math.PI * 0.5);
-        v.normalize();
-        return v;
+    public SVector getStartVelocity() {
+        Boundary boundary = checkpoints.getFirst();
+        return SVector.sub(boundary.getA(), boundary.getB())
+                .rotate(Math.PI * 0.5)
+                .normalize();
     }
 
 }
